--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/fs-extra": "^9.0.1",
+    "@types/helmet": "^0.0.47",
     "@types/mongoose": "^5.7.35",
     "rimraf": "^3.0.2",
     "ts-node-dev": "^1.0.0-pre.56",
@@ -22,6 +23,7 @@
     "@types/uuid": "^8.0.1",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
+    "helmet": "^4.0.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
