--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "rimraf dist"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/fs-extra": "^9.0.1",
     "@types/helmet": "^0.0.47",
@@ -21,6 +22,7 @@
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
     "@types/uuid": "^8.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "helmet": "^4.0.0",
