--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/fs-extra": "^9.0.1",
     "@types/helmet": "^0.0.47",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.35",
     "rimraf": "^3.0.2",
     "ts-node-dev": "^1.0.0-pre.56",
@@ -19,13 +21,17 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
     "@types/uuid": "^8.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
