Added token verification to every route that needed. Fixed some tsconfig problem. Change controllers functions to be es6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,6 @@
 
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
-    "files": ["types.d.ts"]
-  }
+    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
+  },
 }
